--- a/ui/index.html
+++ b/ui/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <div class="center">
-            <img src="/ui/madi.png" class="img-medium"/>
+            <img src="https://scontent.fmaa3-1.fna.fbcdn.net/v/t1.0-0/p206x206/10151323_730620423657628_1597851970298335342_n.jpg?oh=9977c1b48dce31fe8fedde74a34e8ea4&oe=5A36D4BB" class="img-medium"/>
         </div>
         <br>
         <div class="center text-big bold">
