[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -5,11 +5,11 @@
     </head>
     <body>
         <div class="center">
-            <img src="https://scontent.fmaa3-1.fna.fbcdn.net/v/t1.0-0/p206x206/10151323_730620423657628_1597851970298335342_n.jpg=9977c1b48dce31fe8fedde74a34e8ea4&oe=5A36D4BB" class="img-medium"/>
+            <img src="https://goo.gl/NcG8yh" class="img-medium"/>
         </div>
         <br>
         <div class="center text-big bold">
-            Hi! I am Ezhil :) 
+            Hi! I am Ezhil :) --...............--------welcome to my WebApp--------------..................
 		
         </div>
         <script type="text/javascript" src="/ui/main.js">
