[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -9,7 +9,7 @@
         </div>
         <br>
         <div class="center text-big bold">
-            Hi! I am Ezhil :) --...............--------welcome to my WebApp--------------..................
+            Hi! I am Ezhil :)
 		
         </div>
         <script type="text/javascript" src="/ui/main.js">
