--- a/ui/index.html
+++ b/ui/index.html
@@ -4,15 +4,26 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
-        <div class="center">
-            <img src="https://goo.gl/NcG8yh" class="img-medium"/>
-        </div>
-        <br>
-        <div class="center text-big bold">
-            Hi! I am Ezhil :)
-		
+        <div class="container">
+            <div class="center">
+                <img src="https://goo.gl/NcG8yh" class="img-medium"/>
+            </div>
+            <hr />
+            <h3 > Personal </h3>
+            <div class="center text-big bold">
+                Hi! I am Ezhil :)
+    		</div>
+    		<hr />
+    		<h3> Professional </h3>
+    		<div class="center text-big bold">
+    		    I am currently pursuing my B.Tech IT at Rajalakshmi Institute Of Technology
+    		</div>
+    		<div class="footer">
+    		    
+    		</div>
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
+        
     </body>
 </html>
