--- a/ui/index.html
+++ b/ui/index.html
@@ -10,12 +10,12 @@
             </div>
             <hr />
             <h3 > Personal </h3>
-            <div class="center">
+            <div>
                 Hi! I am Ezhil :)
     		</div>
     		<hr />
     		<h3> Professional </h3>
-    		<div class="center">
+    		<div>
     		    I am currently pursuing my B.Tech IT at Rajalakshmi Institute Of Technology
     		</div>
     		<div class="footer">
